Use Java collections Map and Set instead of Guava collections
Signed-off-by: Jarno Elovirta <jarno@elovirta.com>