@@ -204,7 +204,7 @@ public abstract class AbstractModuleTest {
 
   protected abstract AbstractPipelineModule getModule();
 
-  private static final Set<String> IGNORE = ImmutableSet.of(".job.xml", ".DS_Store");
+  private static final Set<String> IGNORE = Set.of(".job.xml", ".DS_Store");
 
   private void compare(File actDir, File expDir, Store store) throws SAXException, IOException {
     final Set<String> names = new HashSet<>();
